@@ -390,6 +390,7 @@ void CaMuleExternalConnector::ConnectAndRun(const wxString &ProgName, const wxSt
 		// Create the socket
 		Show(_("\nCreating client...\n"));
 		m_ECClient = new CRemoteConnect(NULL);
+		m_ECClient->SetCapabilities(m_ZLIB, true, false);	// ZLIB, UTF8 numbers, notification
 
 		// ConnectToCore is blocking since m_ECClient was initialized with NULL
 		if (!m_ECClient->ConnectToCore(m_host, m_port, wxT("foobar"), m_password.Encode(), ProgName, ProgVersion)) {
@@ -543,6 +544,7 @@ void CaMuleExternalConnector::LoadConfigFile()
 		m_host = m_configFile->Read(wxT("/EC/Host"), wxEmptyString);
 		m_port = m_configFile->Read(wxT("/EC/Port"), 4712l);
 		m_configFile->ReadHash(wxT("/EC/Password"), &m_password);
+		m_ZLIB = m_configFile->Read(wxT("/EC/ZLIB"), 1l) != 0;
 	}
 }
 
